add meta description

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Instant Inbox is an easy-to-use intelligent email management web application that utilizes machine learning to automatically send pre-written responses based on tags assigned to incoming emails, enabling users to manage their inbox with greater efficiency."
+        />
 
         <!-- FAVICON -->
         <link
