add onclick events on buttons in the page

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,12 @@
                         Artificial Intelligence to help you automate the process
                         of responding to emails with our easy-to-use interface.
                     </p>
-                    <button class="btn btn--filled">Start here</button>
+                    <button
+                        class="btn btn--filled"
+                        onclick="window.location.href='/login'"
+                    >
+                        Start here
+                    </button>
                 </div>
                 <div class="hero-img-box">
                     <img
@@ -92,7 +97,12 @@
                 Don't waste your precious time communicating back and forth when
                 you could spend time teaching
             </h2>
-            <button class="btn btn--cta">Get started today</button>
+            <button
+                class="btn btn--cta"
+                onclick="window.location.href='/login'"
+            >
+                Get started today
+            </button>
         </div>
     </section>
 </main>
