--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,8 @@
             rel="stylesheet"
             href="{{ url_for('static', filename='./css/style.css') }}"
         />
+        <link rel="stylesheet" href="{{url_for('static',
+        filename="./css/emails.css")}}">
 
         <!-- JAVASCRIPT FILES -->
         <script
