--- a/static/css/emails.css
+++ b/static/css/emails.css
@@ -1,26 +1,64 @@
 /** STYLES FOR INBOX.HTML **/
 /*************************/
+/* INBOX CONTAINER*/
+/*************************/
+.inbox-container {
+    padding: 9.6rem 0;
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    align-items: start;
+    gap: 0 6.4rem;
+}
+
+.side-navigation {
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
+}
+
+.btn-side-nav {
+    border: none;
+    background-color: #fff;
+    color: #333;
+    font-size: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 1.2rem 2.4rem;
+    border-radius: 10px;
+    transition: all 0.3s;
+}
+
+.btn-side-nav:hover,
+.selected {
+    background-color: rgba(24, 100, 171, 0.1);
+    color: #1864ab;
+}
+
+/*************************/
 /* EMAILS SECTION */
 /*************************/
 .section-emails {
-    padding: 9.6rem 0;
+    overflow-y: scroll;
+    min-height: 80vh;
 }
 
 .email-card {
-    background-color: #f7f7f7;
-    padding: 1.2rem;
+    background-color: #eee;
     width: 100%;
-    border-radius: 12px;
-    margin-bottom: 1.6rem;
     display: flex;
     align-items: center;
     gap: 2.4rem;
+    padding: 2.4rem;
+    border-radius: 12px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-bottom: 0.8rem;
     cursor: pointer;
     transition: all 0.4s;
 }
 
 .email-card:hover {
-    background-color: #eee;
+    background-color: #ddd;
 }
 
 .email-address {
