--- a/static/css/emails.css
+++ b/static/css/emails.css
@@ -138,9 +138,9 @@ textarea {
     font-size: 1.8rem;
     font-family: inherit;
     line-height: 1.8;
-    width: 80%;
+    width: 100%;
     resize: none;
-    overflow: hidden;
+    overflow-y: scroll;
     min-height: 3.2rem;
 }
 
