add CDN for sweet alert JS

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
             src="{{url_for('static', filename='./js/script.js')}}"
         ></script>
 
+        <!-- ANIMATED ALERT CDN (SWEET ALERT) -->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
         <title>InstantInbox &mdash; {{title}}</title>
     </head>
     <body>
