--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -6,6 +6,8 @@
         const data = await response.json();
         const { email_address, messages } = data;
 
+        saveUserData(email_address);
+
         // Store the email address in local/session storage
         sessionStorage.setItem('email_address', email_address);
 
@@ -105,9 +107,70 @@
         });
     }
 
+    async function saveUserData(email_address) {
+        const response = await fetch('/save-user-data', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ email_address }),
+        });
+
+        const data = await response.json();
+
+        // Update the textarea elements with the fetched tag
+        document.getElementById('module-change').value = data.module_change;
+        document.getElementById('travel-leave').value = data.travel_leave;
+        document.getElementById('sick-leave').value = data.sick_leave;
+    }
+
+    async function saveTags() {
+        const emailAddress = sessionStorage.getItem('email_address');
+        const moduleChange = document.getElementById('module-change').value;
+        const travelLeave = document.getElementById('travel-leave').value;
+        const sickLeave = document.getElementById('sick-leave').value;
+
+        const response = await fetch('/update-tags', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                email_address: emailAddress,
+                module_change: moduleChange,
+                travel_leave: travelLeave,
+                sick_leave: sickLeave,
+            }),
+        });
+
+        if (response.status === 200) {
+            swal({
+                title: 'Tags updated!',
+                text: 'Tags updated successfully!',
+                icon: 'success',
+            });
+        } else if (response.status === 304) {
+            swal({
+                title: 'Content unchanged!',
+                text: 'You have NOT changed the content of any tag.',
+                icon: 'warning',
+            });
+        } else {
+            // Handle other unexpected status codes
+            swal({
+                title: 'Error!',
+                text: 'An unexpected error occurred. Please try again.',
+                icon: 'error',
+            });
+        }
+    }
+
     window.onload = () => {
         fetchInbox();
         switchView();
+
+        // To register the event listener for the "Save" button
+        document.getElementById('btn-save').addEventListener('click', saveTags);
     };
 </script>
 
